@@ -12,7 +12,7 @@ our @ISA = qw/ EPrints::Plugin::Import /;
 # a single record.
 
 
-$EPrints::Plugin::Import::ABSTRACT = 1;
+$EPrints::Plugin::Import::DISABLE = 1;
 
 sub new
 {
